--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,1 +1,1 @@
-/home/wray/.config/waybar/style/[Wallust Transparent] Crystal Clear.css
+/home/wray/.config/waybar/style/[Extra] Modern-Combined - Transparent.css
