--- a/.config/waybar/style/[Extra] Modern-Combined - Transparent.css
+++ b/.config/waybar/style/[Extra] Modern-Combined - Transparent.css
@@ -103,7 +103,9 @@ tooltip {
 /*-----module groups----*/
 .modules-left,
 .modules-right {
-    background-color: transparent;
+    /* background-color: transparent; */
+    background-color: rgba(66, 66, 66, 0.6);
+    border-radius: 12px;
 }
 
 .modules-center {
@@ -113,6 +115,10 @@ tooltip {
 	padding-bottom: 8px;
 	padding-left: 10px;
 	padding-right: 6px;
+}
+
+#custom-separator {
+    color: #91bef0;
 }
 
 #backlight,
@@ -127,7 +133,9 @@ tooltip {
 #memory,
 #mode,
 #mpris,
-#network,
+#network {
+    color: #91bef0;
+}
 #power-profiles-daemon,
 #pulseaudio,
 #pulseaudio-slider,
@@ -140,7 +148,9 @@ tooltip {
 #workspaces,
 #custom-backlight,
 #custom-browser,
-#custom-cava_mviz,
+#custom-cava_mviz {
+    color: #91bef0;
+}
 #custom-cycle_wall,
 #custom-dot_update,
 #custom-file_manager,
@@ -151,9 +161,13 @@ tooltip {
 #custom-hint,
 #custom-hypridle,
 #custom-menu,
-#custom-playerctl,
+#custom-playerctl {
+    color: rgba(256, 256, 0, 0.5);
+}
 #custom-power_vertical,
-#custom-power,
+#custom-power {
+    color: #91bef0;
+}
 #custom-settings,
 #custom-spotify,
 #custom-swaync,
@@ -210,7 +224,7 @@ tooltip {
 
 #pulseaudio-slider,
 #pulseaudio {
-	color: @foreground;
+	color: #91bef0;
 }
 
 #backlight-slider slider,
