--- a/.config/waybar/wallust/colors-waybar.css
+++ b/.config/waybar/wallust/colors-waybar.css
@@ -1,23 +1,24 @@
 /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
  /* wallust template - colors-waybar */
 
-@define-color foreground #ECE0E0;
-@define-color background rgba(26,24,26,0.25);
-@define-color cursor #A89CAA;
-
-@define-color color0 #413F41;
-@define-color color1 #2F252A;
-@define-color color2 #4A4256;
-@define-color color3 #5F4D51;
-@define-color color4 #8F7577;
-@define-color color5 #6981B0;
-@define-color color6 #977C7E;
-@define-color color7 #DCCACB;
-@define-color color8 #9A8D8E;
-@define-color color9 #3E3139;
-@define-color color10 #635973;
-@define-color color11 #7F666C;
-@define-color color12 #BF9C9F;
-@define-color color13 #8CACEA;
-@define-color color14 #CAA5A8;
-@define-color color15 #DCCACB;
+ @define-color foreground #F3E9E3;
+ @define-color background #151414;
+ @define-color background-alt rgba(21,20,20,0.25);
+ @define-color cursor #A9957F;
+ 
+ @define-color color0 #3C3C3B;
+ @define-color color1 #17130E;
+ @define-color color2 #473214;
+ @define-color color3 #3C3D38;
+ @define-color color4 #7E541C;
+ @define-color color5 #7E541C;
+ @define-color color6 #A59084;
+ @define-color color7 #E5D7CF;
+ @define-color color8 #A09791;
+ @define-color color9 #1F1A12;
+ @define-color color10 #5F421B;
+ @define-color color11 #50514B;
+ @define-color color12 #A87025;
+ @define-color color13 #A87025;
+ @define-color color14 #DCC0B0;
+ @define-color color15 #E5D7CF; 
